# degine

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
degine/: BUILD
degine/Conversion/TorchToMLIR/: TorchToMLIR.h
degine/Tools/degine-opt/: BUILD  main.cc
degine/benchmark/: BUILD.bazel  copy.cu
degine/common/: BUILD.bazel  KernelRegistry.h
degine/conversion/TorchToMLIR/: BUILD  TorchToMLIR.cc  TorchToMLIR.h
degine/cpu/: BUILD.bazel  CpuInferSession.cc  CpuInferSession.h  KernelRegistry.h  OpKernel.cc  OpKernel.h
degine/cpu/kernels/: AddKernel.cc
degine/ir/: BUILD.bazel  GraphInfo.h  GraphModule.cc  GraphModule.h  common.h  graph.h
degine/proposal/: BUILD.bazel  InferSession.h  KernelRegistry.h  add_kernel.cc  demo.cc  graph.h  kernel.h  kernel_registry.h  main.cc
degine/proposal/degine-opt/: BUILD.bazel  main.cc
degine/proposal/runtime/: BUILD.bazel  CpuInferSession.h  GraphModule.h  OpKernel.cc  OpKernel.h  main.cc
degine/proto/: BUILD  onnx.proto
degine/tests/: alexnet.mlir  async.mlir  demo.mlir  print_stablehlo.mlir
degine/tools/degine-opt/: BUILD  BUILD.bazel  ONNXSerializer.h  Passes.cc  Passes.h  main.cc  utils.h
degine/tools/degine_importer/: BUILD  TorchToMLIR.cc  main.cc
degine/tools/degine_opt/: BUILD  ONNXSerializer.h  main.cc  utils.h
degine/tools/demo/: BUILD  BUILD.bazel  demo.cc  main.cc  test.mlir
degine/tools/torch_importer/: BUILD  TorchToMLIR.h  main.cc
degine/torch/: BUILD  TorchToMLIR.cc
degine/transforms/: AsyncFromDataFlowPass.cc  BUILD.bazel  Passes.cc  Passes.h  Passes.td  RankedMemrefAllocToGlobalPass.cc  RankedTensorBufferizePass.cc
degine/transforms/TorchToMLIR/: BUILD  Importer.cc
tests/mlir/: alexnet.mlir  all-reduce-and.mlir  async-region.mlir  async.mlir  scf-loop-unroll.mlir  specialize-generic-ops.mlir  test-elementwise.mlir
tests/torch/: alexnet.py
