package(default_visibility = ["//visibility:public"])

cc_library(
    name = "cpu",
    hdrs = glob(["*.h"]),
    srcs = glob(["*.cc", "kernels/*.cc"]),
    alwayslink = True,
    deps = [
        "@fmt",
        "@boost.core",
        "@boost.range",
        "@boost.preprocessor",
        "//degine/common",
        "//degine/ir",
    ],
)

