load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")

gentbl_cc_library(
    name = "degine_pass_inc_gen",
    strip_include_prefix = ".",
    tbl_outs = [
        (
            [
                "-gen-pass-decls",
                "-name=DegineTransforms",
            ],
            "degine/transforms/Passes.h.inc",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "Passes.td",
    deps = ["@llvm-project//mlir:PassBaseTdFiles"],
)

cc_library(
    name = "degine_passes",
    srcs = glob(["*.cc"]),
    hdrs = glob(["*.h"]),
    deps = [
        ":degine_pass_inc_gen",
    ],
)
