load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")

proto_library(
    name = "onnx_proto",
    srcs = ["onnx.proto"],
)

cc_proto_library(
    name = "onnx_cc_proto",
    deps = [":onnx_proto"],
)

cc_library(
    name = "headers",
    hdrs = glob(["*.h"]),
)

cc_binary(
    name = "demo",
    srcs = glob(["*.cc"]),
    deps = [
        "@boost.core",
        "@boost.range",
        "@boost.preprocessor",
        "@fmt",
        ":onnx_cc_proto",
        ":headers",
    ],
)

